demo/uebung-12/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kino-ingress"
  namespace: adrian
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: kino
spec:
  rules:
    - host: kino.adrian.sandbox.aws.wps.de
      http:
        paths:
          - path: /*
            backend:
              serviceName: "kino-ui"
              servicePort: 80
